tests/baselines/reference/importDeferTypeConflict2.errors.txt
b.ts(1,14): error TS18058: Default imports aren't allowed for deferred imports.
b.ts(1,19): error TS1005: 'from' expected.
b.ts(1,19): error TS1141: String literal expected.
b.ts(1,24): error TS1005: ';' expected.
b.ts(1,24): error TS2304: Cannot find name 'ns1'.
b.ts(1,28): error TS1434: Unexpected keyword or identifier.
b.ts(1,28): error TS2304: Cannot find name 'from'.


==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (7 errors) ====
    import defer type * as ns1 from "a";
                 ~~~~
!!! error TS18058: Default imports aren't allowed for deferred imports.
                      ~
!!! error TS1005: 'from' expected.
                      ~~~~
!!! error TS1141: String literal expected.
                           ~~~
!!! error TS1005: ';' expected.
                           ~~~
!!! error TS2304: Cannot find name 'ns1'.
                               ~~~~
!!! error TS1434: Unexpected keyword or identifier.
                               ~~~~
!!! error TS2304: Cannot find name 'from'.
    